--- a/src/openlmis-form/characters-left.scss
+++ b/src/openlmis-form/characters-left.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     font-size: 0.8em;
+    margin-left: 0.8em;
 
     .no-left {
         color: $red;
