OLMIS-2032: Removed flush table styles

--- a/src/openlmis-table/table-forms.scss
+++ b/src/openlmis-table/table-forms.scss
@@ -62,8 +62,14 @@ Styleguide 4.5
 
 td.form-control {
   display: table-cell;
+  box-shadow: 0em 0em 0em #fff;
   width: auto;
   border-radius: 0px;
+  &.is-focused,
+  &.is-invalid {
+    box-shadow: 0em 0em 0em #fff;
+  }
+
   > label{
     display: block;
     height:0px;
@@ -74,27 +80,6 @@ td.form-control {
     left: 0px;
     margin:0px;
     padding: 0px;
-  }
-  > input[type="text"],
-  > input[type="password"],
-  > input[type="number"],
-  > select {
-    border-radius: 0px;
-    border-width: 0px;
-    box-shadow: inset 0 0 0em $light-gray;
-    &:focus,
-    &:disabled {
-      box-shadow: inset 0 0 0em $light-gray;
-    }
-  }
-}
-
-tr:nth-child(2n+1) td.form-control{
-  > input[type="text"],
-  > input[type="password"],
-  > input[type="number"],
-  > select {
-    background-color: $background-color-alt;
   }
 }
 
