OLMIS-1414: Added documentation for breadcrumbs

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -1,3 +1,11 @@
+/*
+Layout
+
+This section describes how OpenLMIS pages should be organized to allow for
+navigation and readability.
+
+Styleguide 2.0
+*/
 
 html {
   height: 100%;
