OLMIS-2033: Added default form width

--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -19,6 +19,8 @@ $font-size: 14px;
 $font-size-large: 22px;
 $font-size-extra-large: 36px;
 
+$default-form-width: 440px;
+
 $brand-primary: $brand-blue;
 $brand-accent: $orange;
 $brand-danger: $red;
