--- a/src/openlmis-table/tbody-title.scss
+++ b/src/openlmis-table/tbody-title.scss
@@ -19,7 +19,7 @@ directive for more details.](../../docs/#/api/openlmis.table:tbodyTitle)
       <th>Actions</th>
     </tr>
   </thead>
-  <tbody title="Table section title #1">
+  <tbody tbody-title="Table section title #1">
     <tr>
       <td class="center-justified">
         <i class="icon-ok"/>
@@ -46,7 +46,7 @@ directive for more details.](../../docs/#/api/openlmis.table:tbodyTitle)
       </td>
     </tr>
   </tbody>
-  <tbody title="Another table section title">
+  <tbody tbody-title="Another table section title">
     <tr>
       <td>
         <i class="icon-ok"/>
