--- a/src/openlmis-table/sticky.scss
+++ b/src/openlmis-table/sticky.scss
@@ -60,14 +60,21 @@ tr.title > td > div  {
     width: $space-size/4;
     height: 100%;
     background: transparent;
-    
+
   }
-  &.stuck-left:after{
+  &.stuck-left:after {
     right: $space-size/4 * -1;
     background-image: linear-gradient(to right, $light-gray, transparent);
   }
-  &.stuck-right:after{
+  &.stuck-right:after {
     left: $space-size/4 * -1;
     background-image: linear-gradient(to left, $light-gray, transparent);
+  }
+  &.stuck-top {
+	z-index: 2;
+  }
+  &.stuck-top.stuck-left,
+  &.stuck-top.stuck-right {
+	z-index: 3;
   }
 }
