OLMIS-2206: move openlmis-table-container toolbar above table

--- a/src/common/openlmis-toolbar.scss
+++ b/src/common/openlmis-toolbar.scss
@@ -30,6 +30,8 @@ Styleguide 6.0
 
 .toolbar {
     @extend .button-group;
+    margin-left: 0;
+    margin-right: 0;
 
     h1, h2, h3, h4, h5, h6 {
         padding: 0px;
