--- a/src/openlmis-form/select-search-option.scss
+++ b/src/openlmis-form/select-search-option.scss
@@ -1,7 +1,46 @@
 .select-search-option {
 
     .form-group {
-        max-height: 40em;
-        overflow-y: auto;
+        overflow-y: hidden;
     }
+}
+
+.select-content {
+    overflow: auto;
+    max-height: 22.5em;
+    border-bottom: $heading-border-color 1px solid;
+}
+
+select {
+    padding-left: 1.7em;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image:
+            linear-gradient(45deg, transparent 50%, gray 50%),
+            linear-gradient(135deg, gray 50%, transparent 50%);
+    background-position:
+            10px 1em,
+            14px 1em;
+    background-size:
+            5px 5px,
+            5px 5px;
+    background-repeat: no-repeat;
+}
+
+select:focus {
+    padding-left: 1.7em;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image:
+            linear-gradient(45deg, gray 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, gray 50%);
+    background-position:
+            14px 1em,
+            10px 1em;
+    background-size:
+            5px 5px,
+            5px 5px;
+    background-repeat: no-repeat;
 }
