--- a/src/common/font-awesome.scss
+++ b/src/common/font-awesome.scss
@@ -1,5 +1,5 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url("fonts/fontawesome-webfont") format('woff');
+  src: url("fonts/fontawesome-webfont.woff");
 }
