add padding to show button top border when focus

--- a/src/openlmis-table/openlmis-table-container.scss
+++ b/src/openlmis-table/openlmis-table-container.scss
@@ -155,6 +155,9 @@ Styleguide 4.1
                 margin-bottom: 0em;
             }
         }
+        > .toolbar {
+            padding-top: 0.5em;
+        }
     }
 
     .openlmis-flex-table {
