OLMIS-2189: Removed the gap after the last table toolbar button

--- a/src/openlmis-table/openlmis-table-container.scss
+++ b/src/openlmis-table/openlmis-table-container.scss
@@ -168,4 +168,12 @@ Styleguide 4.1
         }
     }
 
+    .toolbar {
+
+        *:last-child {
+            margin-right: 0;
+        }
+
+    }
+
 }
