OLMIS-2037: disabled overflow on toolbar element

--- a/src/openlmis-table/openlmis-table-container.scss
+++ b/src/openlmis-table/openlmis-table-container.scss
@@ -170,6 +170,8 @@ Styleguide 4.1
 
     .toolbar {
 
+        overflow: hidden; // prevents from addin scrollbar to toolbar on firefox
+
         *:last-child {
             margin-right: 0;
         }
