--- a/src/openlmis-form/form-inline.scss
+++ b/src/openlmis-form/form-inline.scss
@@ -34,7 +34,7 @@ Styleguide 3.1
 form.form-inline,
 .form-inline {
 	display: flex;
-	align-items: flex-end;
+	align-items: baseline;
 	flex-wrap: nowrap;
 	> * {
 		flex: 0 0 auto;
