--- a/src/openlmis-modal/modal.scss
+++ b/src/openlmis-modal/modal.scss
@@ -1,6 +1,6 @@
 
 .modal {
-	
+
 	.modal-header,
 	.modal-body,
 	.modal-footer{
@@ -27,4 +27,21 @@
 		right: 0em;
 		margin-top: 0px !important; // Added because bootbox.js adds inline styles
 	}
+}
+
+.modal-backdrop.am-fade {
+  opacity: .5;
+  transition: opacity .15s linear;
+  &.ng-enter {
+    opacity: 0;
+    &.ng-enter-active {
+      opacity: .5;
+    }
+  }
+  &.ng-leave {
+    opacity: .5;
+    &.ng-leave-active {
+      opacity: 0;
+    }
+  }
 }
