--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -6,26 +6,29 @@ navigation and readability.
 
 Styleguide 2.0
 */
-
 html {
-  height: 100%;
+    height: 100%;
 }
 
-body{
-	display: flex;
-	flex-direction: column;
-	> *{
-		flex: 1 0 auto;
-		display: flex;
-		flex-direction: column;
-		> *{
-			flex: 1 0 auto;
-		}
-	}
-	> header,
-	> footer {
-		flex: 0 0 auto;
-	}
+body {
+    display: flex;
+    flex-direction: column;
+
+    > * {
+        flex: 1 0 auto;
+        display: flex;
+        flex-direction: column;
+
+        > * {
+            flex: 1 0 auto;
+        }
+    }
+
+     > footer,
+    > header {
+        flex: 0 0 auto;
+    }
+
     > script {
         display: none;
     }
@@ -35,44 +38,48 @@ body{
     flex-grow: 0;
     margin: 1em;
     box-shadow: 0 0 0.5em $shadow;
-    border: 0px;
+    border: 0;
     background: $white;
     padding: 1em 2em;
 
-    > * {
-    	margin: 0em;
-        margin-bottom: 1em;
-    }
-
-    > header,
-    > h1, > h2 {
-        @extend .heading;
-        background-color: transparent;
-    }
-
-    > section {
-        > header,
-        > h3 {
-           @extend .sub-heading;
+    div[ui-view] {
+        > *:not(:last-child) {
+            margin: 0 0 1em;
         }
-    }
 
-    > nav > ul {
-        @extend .nav;
-        @extend .nav-tabs;
+         > h1,
+         > h2,
+        > header {
+            @extend .heading;
+            background-color: transparent;
+        }
 
-        > li > a {
-            background-color: $background-color-alt;
-            text-decoration: none;
-          &:hover{
-                text-decoration: underline;
+        > section {
+             > h3,
+            > header {
+                @extend .sub-heading;
             }
         }
 
-        > li > a.active {
-            background-color: $background-color;
-            &:hover {
+        > nav > ul {
+            @extend .nav;
+            @extend .nav-tabs;
+
+            > li > a {
+                background-color: $background-color-alt;
                 text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            > li > a.active {
+                background-color: $background-color;
+
+                &:hover {
+                    text-decoration: none;
+                }
             }
         }
     }
