--- a/src/openlmis-table/sticky.scss
+++ b/src/openlmis-table/sticky.scss
@@ -12,7 +12,7 @@ Tables can have sticky columns to keep important elements within view.
       <th class="col-sticky">Name</th>
       <th>Date range</th>
       <th>Duration</th>
-      <th class="col-sticky">Actions</th>
+      <th class="col-sticky sticky-right">Actions</th>
     </tr>
   </thead>
   <tbody tbody-title="Group 1">
