--- a/src/openlmis-form/select.scss
+++ b/src/openlmis-form/select.scss
@@ -68,6 +68,40 @@ select{
 	}
 }
 
+select {
+    padding-left: 1.7em;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image:
+            linear-gradient(45deg, transparent 50%, gray 50%),
+            linear-gradient(135deg, gray 50%, transparent 50%);
+    background-position:
+            10px 1em,
+            14px 1em;
+    background-size:
+            5px 5px,
+            5px 5px;
+    background-repeat: no-repeat;
+}
+
+select:focus {
+    padding-left: 1.7em;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image:
+            linear-gradient(45deg, gray 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, gray 50%);
+    background-position:
+            14px 1em,
+            10px 1em;
+    background-size:
+            5px 5px,
+            5px 5px;
+    background-repeat: no-repeat;
+}
+
 select.pop-out:disabled {
 	box-shadow: inset 0 0 0.5em #ddd;
 	background-color: #fff;
