OLMIS-2328: fixed styleguide for sticky columns

--- a/src/openlmis-table/sticky.scss
+++ b/src/openlmis-table/sticky.scss
@@ -8,8 +8,8 @@ Tables can have sticky columns to keep important elements within view.
   <thead>
     <tr>
       <th class="col-sticky">Checkbox</th>
-      <th>Code</th>
-      <th class="col-sticky">Name</th>
+      <th class="col-sticky>Code</th>
+      <th>Name</th>
       <th>Date range</th>
       <th>Duration</th>
       <th class="col-sticky sticky-right">Actions</th>
