OLMIS-2476: Added select2.js
- Added and styled select2 (removed tests for now)
- Removed unknownOption behavior from selectCtrl
- Made select2 look like popover element
- Renamed files to select-select2 for clarity

--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -45,6 +45,7 @@ $input-border: $border-color !default;
 $text-shadow-size: 5px !default;
 
 $border-radius: 4px !default;
+$border-width: 1px;
 $border-radius-base: $border-radius;
 $border-radius-large: $border-radius;
 $border-radius-small: $border-radius;
