OLMIS-2476: Changed .xelect2-container z-index to be above modal

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -72,6 +72,10 @@
 
 }
 
+.select2-container {
+    z-index: 1042; // Higher than modal z-index
+}
+
 .select2-container .select2-dropdown {
 
     border: $border-color 1px solid;
