OLMIS-2476: Cleaned up value updating for select directives
- Made select2 just watch element.val()
- Made select-one only work with required elements
- Made select-placeholder only watch $viewValue
- Added unknownOption back to placeholder, and simplified code

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -112,7 +112,7 @@
     }
 
     // This is the placeholder option
-    .select2-results__option:first-child[aria-disabled="true"]{
+    .select2-results__option[aria-disabled="true"]{
         display: none;
     }
 
