--- a/src/common/buttons.scss
+++ b/src/common/buttons.scss
@@ -76,6 +76,8 @@ button {
     }
 
     &.add {
+        @extend button.primary;
+        @include button($button-color-default);
         @include button-icon('plus');
     }
 }
