OLMIS-2476: Added overflow and white-space properties

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -20,6 +20,8 @@
         background-color: transparent;
         border-width: 0px;
         display: flex;
+        white-space: pre;
+        overflow: hidden;
 
         &:focus {
             outline: 0px;
