fixed sticky columns styleguide section

--- a/src/openlmis-table/sticky.scss
+++ b/src/openlmis-table/sticky.scss
@@ -8,7 +8,7 @@ Tables can have sticky columns to keep important elements within view.
   <thead>
     <tr>
       <th class="col-sticky">Checkbox</th>
-      <th class="col-sticky>Code</th>
+      <th class="col-sticky">Code</th>
       <th>Name</th>
       <th>Date range</th>
       <th>Duration</th>
