OLMIS-2494: Added textarea-required directive

--- a/src/openlmis-form/form.scss
+++ b/src/openlmis-form/form.scss
@@ -218,7 +218,7 @@ span.error {
     margin-top: 0;
     margin-bottom: 0;
     font-style: italic;
-    color: $dark-gray;
+    color: $red;
 }
 
 .ng-submitted {
